--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
 	<head>
 	    <meta charset="utf-8">
 	    <title>Games Blog</title>
+
+	    <!-- links -->
 	    <link href="app.css" rel="stylesheet"/>
 	    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+	    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	</head>
 	<body>
 
-		<!-- default bar -->
-		<h1 id="site-title"> Games Blog </h1>
-		<img id="title-frame" src="images/titleFrame.png" alt="titleFrame" width="400" height="135"/>
-		<h3 id="subtitle">gaming reviews and top 10's</h3>
-		<img id="controllerA" src="images/controller1.png" alt="controller" width="100" height="100"/>
-		<img id="controllerB" src="images/controller2.png" alt="controller" width="100" height="100"/>
-		<a id="contactPage" href="contactPage.html">Contact me</a>
-		<a id="homePage" href="index.html">★Home</a>
-		<a id="contentPage" href="contentPage.html">Content</a>
-		<a id="top-ten-page" href="top-ten-page.html">Top 10's</a>
+		<div>
+			<!-- default bar -->
+			<h1 id="site-title"> Games Blog </h1>
+			<img id="title-frame" src="images/titleFrame.png" alt="titleFrame" width="400" height="135"/>
+			<h3 id="subtitle">gaming reviews and top 10's</h3>
+			<img id="controllerA" src="images/controller1.png" alt="controller" width="100" height="100"/>
+			<img id="controllerB" src="images/controller2.png" alt="controller" width="100" height="100"/>
+			<a id="contactPage" href="contactPage.html">Contact me</a>
+			<a id="homePage" href="index.html">★Home</a>
+			<a id="contentPage" href="contentPage.html">Content</a>
+			<a id="top-ten-page" href="top-ten-page.html">Top 10's</a>
 
-		<!-- home main -->
-		
+			<!-- home main -->
+			<h2 id="about-title">~About~</h2>
+	        <p id="about-paragraph">Welcome to my website! This is a full review of most played games and small games at your request. All of the <br>reviews ar onest and pretty detailed. I want to mention the fact that all of this reviews are just my opinion and if you <br>have a diffrent one you can easilywrite a review too. I also include top 10's of topics that you'll ask me to make. If you <br>find any bug to thewebsite or you want to tell me your opinion about a game you can check the "<a id="contact-word" href="contactPage.html">contact me</a>" section to <br>find my socialmedia adresses. I'll hope you enjoy my reviews,top 10's and website. Enjoy! :)</p>
+			<p id="creator"> Created By: Lazar Sebastian</p>
+		</div>
 
 	</body>
 </html>
